@@ -1,3 +1,9 @@
+2007-05-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string):
+	* flumotion/component/dvb/dvb.xml:
+	Add deinterlacing support using a real deinterlacer.
+
 2007-04-05  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>
 
 	* configure.ac:
